--- a/app/src/main/res/layout/day_of_week.xml
+++ b/app/src/main/res/layout/day_of_week.xml
@@ -3,14 +3,15 @@
               android:id="@+id/day_linear_layout"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="100dp">
+              android:layout_height="200dp">
     <TextView
         android:id="@+id/day_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/event_text_view"
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/single_day_recyclerview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 </LinearLayout>
