--- a/app/src/main/res/layout/week_view_day.xml
+++ b/app/src/main/res/layout/week_view_day.xml
@@ -9,8 +9,7 @@
               android:layout_height="150dp"
               android:layout_marginRight="@dimen/activitu_half_margin"
               android:layout_marginLeft="@dimen/activitu_half_margin"
-              android:layout_marginBottom="@dimen/activitu_half_margin"
-              android:background="@color/back">
+              android:layout_marginBottom="@dimen/activitu_half_margin">
     <TextView
         android:id="@+id/day_name_text_view"
         style="@style/day_title"
