--- a/app/src/main/res/layout/week_view_single_event.xml
+++ b/app/src/main/res/layout/week_view_single_event.xml
@@ -5,6 +5,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="@color/just_text"
-    android:background="@color/back_text"/>
+    android:textColor="@color/just_text"/>
 
