--- a/app/src/main/res/layout/week_view_fragment.xml
+++ b/app/src/main/res/layout/week_view_fragment.xml
@@ -7,5 +7,6 @@
     android:paddingRight="@dimen/activitu_half_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/back"
    />
 
