--- a/app/src/main/res/layout/week_view_pager.xml
+++ b/app/src/main/res/layout/week_view_pager.xml
@@ -9,7 +9,6 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/appbar_height"
-        android:theme="@style/AppTheme.Base"
         android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -25,7 +24,7 @@
                 android:id="@+id/tool_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="fitCenter"
+                android:scaleType="fitEnd"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax" />
 
