--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,27 +1,27 @@
 <resources>
 
-    <style name="AppTheme" parent="AppTheme.Base" >
-    <!-- Base application theme.
-         Defining this lets values-v21/styles.xml reuse it with changes. -->
-</style>
-<style name="AppTheme.Base" parent="Theme.AppCompat.NoActionBar">
-<!-- colorPrimary is used, for instance, for the default ActionBar
-     (but not Toolbar) background.
-      We specify the same color for the toolbar background in
-      toolbar.xml.. -->
-<item name="colorPrimary">@color/back</item>
+    <style name="AppTheme" parent="AppTheme.Base">
+        <!-- Base application theme.
+             Defining this lets values-v21/styles.xml reuse it with changes. -->
+    </style>
 
-<!-- colorPrimaryDark is used for the status bar (with the
-     battery, clock, etc). -->
-<item name="colorPrimaryDark">@color/stroke</item>
+    <style name="AppTheme.Base" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/back</item>
+        <item name="colorPrimaryDark">@color/my_primary_dark</item>
+        <item name="colorAccent">@color/my_primary_light</item>
+        <item name="android:textColorPrimary">@color/my_primary_dark</item>
+        <item name="android:textColorSecondary">@color/stroke</item>
+        <item name="actionMenuTextColor">@color/my_primary_dark</item>
+    </style>
+    <style name="AppTheme.Base.grudzien" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/back</item>
+        <item name="colorPrimaryDark">@color/stroke</item>
+        <item name="colorAccent">@color/stroke</item>
+        <item name="android:textColorPrimary">@color/stroke</item>
+        <item name="android:textColorSecondary">@color/stroke</item>
+        <item name="actionMenuTextColor">@color/stroke</item>
+    </style>
 
-<!-- colorAccent is used as the default value for
-     colorControlActivated which is used to tint widgets. -->
-<item name="colorAccent">@color/stroke</item>
-    <item name="android:textColorPrimary">@color/stroke</item>
-    <item name="android:textColorSecondary">@color/stroke</item>
-    <item name="actionMenuTextColor">@color/stroke</item>
-</style>
     <style name="title">
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold|normal</item>
