--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="activity_vertical_margin">8dp</dimen>
     <dimen name="activitu_half_margin">4dp</dimen>
     <dimen name="appbar_height">200dp</dimen>
+    <dimen name="appbar_margin">16dp</dimen>
     <dimen name="week_day_height">180dp</dimen>
     <dimen name="week_corner_radius">4dp</dimen>
 </resources>
