--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="whole_day_background">#FFCDD2</color>
-    <color name="whole_day_text">#B71C1C</color>
+    <color name="whole_day_text">#B6B6B6</color>
     <color name="line">#BDBDBD</color>
     <color name="day_title">#a03968</color>
-    <color name="just_text">#d689ab</color>
+    <color name="just_text">#212121</color>
     <color name="back">#F5F5F5</color>
     <color name="stroke">#7b2854</color>
     <color name="my_primary_dark">#212121</color>
     <color name="my_primary_light">#B6B6B6</color>
+    <color name="day_stroke_back">#ffffff</color>
+    <color name="day_stroke">#017aa9</color>
 
     <color name="styczen_day_title">#95436E</color>
     <color name="styczen_stroke">#7B2854</color>
