--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,8 +3,11 @@
     <dimen name="activity_horizontal_margin">8dp</dimen>
     <dimen name="activity_vertical_margin">8dp</dimen>
     <dimen name="activitu_half_margin">4dp</dimen>
-    <dimen name="appbar_height">200dp</dimen>
+    <dimen name="week_appbar_height">200dp</dimen>
+    <dimen name="day_appbar_height">150dp</dimen>
     <dimen name="appbar_margin">16dp</dimen>
     <dimen name="week_day_height">180dp</dimen>
     <dimen name="week_corner_radius">4dp</dimen>
+    <dimen name="day_corner_radius">8dp</dimen>
+    <dimen name="image_padding">16dp</dimen>
 </resources>
