--- a/app/src/main/res/layout/day_event_layout.xml
+++ b/app/src/main/res/layout/day_event_layout.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical"
-    android:background="@color/back">
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="@dimen/activitu_half_margin"
-        android:layout_marginBottom="@dimen/activitu_half_margin">
+        android:layout_marginBottom="@dimen/activitu_half_margin"
+        android:paddingLeft="16dp"
+              android:paddingTop="@dimen/activity_vertical_margin"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="@drawable/day_stroke_shape">
+
+        <CheckBox
+            android:id="@+id/whole_day_event_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -65,11 +70,7 @@
         android:layout_marginLeft="8dp"
         android:gravity="center"
         android:textSize="20sp"
+        style="@style/subtittle"
         />
-    </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/line"/>
 
 </LinearLayout>
