--- a/app/src/main/res/layout/day_view_pager.xml
+++ b/app/src/main/res/layout/day_view_pager.xml
@@ -8,7 +8,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/appbar_height"
+        android:layout_height="@dimen/day_appbar_height"
         android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -25,8 +25,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                android:paddingRight="@dimen/appbar_margin"
-                android:scaleType="fitEnd"
+                android:src="@drawable/dzien"
+                android:scaleType="centerInside"
                 app:layout_collapseMode="parallax"/>
 
             <android.support.v7.widget.Toolbar
