--- a/app/src/main/res/layout/week_view_pager.xml
+++ b/app/src/main/res/layout/week_view_pager.xml
@@ -8,7 +8,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/appbar_height"
+        android:layout_height="@dimen/week_appbar_height"
         android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -27,7 +27,7 @@
                 android:scaleType="fitEnd"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"
-                android:paddingRight="@dimen/appbar_margin"/>
+                android:padding="@dimen/image_padding"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -45,6 +45,7 @@
         android:id="@+id/week_viewpager"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:background="@color/back"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
