--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,13 +31,13 @@
     <style name="subtittle">
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/whole_day_text</item>
+        <item name="android:textColor">@color/day_stroke</item>
     </style>
 
     <style name="numbers">
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/just_text</item>
+        <item name="android:textColor">@color/day_stroke</item>
         <item name="android:gravity">top</item>
         <item name="android:paddingTop">4dp</item>
     </style>
