--- a/app/src/main/res/layout/day_event_layout.xml
+++ b/app/src/main/res/layout/day_event_layout.xml
@@ -10,11 +10,6 @@
               android:paddingBottom="@dimen/activity_vertical_margin"
         android:background="@drawable/day_stroke_shape">
 
-        <CheckBox
-            android:id="@+id/whole_day_event_box"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -47,7 +42,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/endi_hour"
+                android:id="@+id/ending_hour"
                 style="@style/numbers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
