--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,11 +48,14 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="week_month_title">
-        <item name="android:textColor">#ffffffff</item>
-        <item name="android:shadowColor">#000000</item>
-        <item name="android:shadowDx">1</item>
-        <item name="android:shadowDy">1</item>
-        <item name="android:shadowRadius">1</item>
+
+    <style name="week_event">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:gravity">left</item>
+        <item name="android:clickable">false</item>
+        <item name="android:duplicateParentState">true</item>
+        <item name="android:visibility">gone</item>
     </style>
 </resources>
