--- a/app/src/main/res/layout/week_view_pager.xml
+++ b/app/src/main/res/layout/week_view_pager.xml
@@ -50,17 +50,21 @@
                 app:layout_scrollFlags="scroll|enterAlways"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
-
     </android.support.design.widget.AppBarLayout>
-
-
     <android.support.v4.view.ViewPager
         android:id="@+id/week_viewpager"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@color/back"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floating_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:layout_marginBottom="@dimen/md_keylines"
+        android:layout_marginRight="@dimen/md_keylines"
+        android:src="@drawable/ic_add_white_24dp"/>
 </android.support.design.widget.CoordinatorLayout>
 
 
