--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="week_corner_radius">4dp</dimen>
     <dimen name="day_corner_radius">8dp</dimen>
     <dimen name="image_padding">16dp</dimen>
+    <dimen name="md_keylines">16dp</dimen>
 </resources>
