--- a/app/src/main/res/drawable/day_stroke_shape.xml
+++ b/app/src/main/res/drawable/day_stroke_shape.xml
@@ -1,13 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
-    <corners
-        android:bottomLeftRadius="32dp"
-        android:bottomRightRadius="4dp"
-        android:topLeftRadius="32dp"
-        android:topRightRadius="4dp"/>
-    <solid android:color="@color/day_stroke_back"/>
-    <stroke
-        android:width="1dp"
-        android:color="@color/day_stroke"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+<item>
+    <shape android:shape="rectangle">
+        <corners
+            android:radius="4dp"/>
+        <solid android:color="@color/day_stroke_back"/>
+    </shape>
+</item>
+
+<item android:right="-2dp" android:left="-2dp">
+    <shape>
+        <solid android:color="@android:color/transparent"/>
+        <stroke
+            android:width="1dp"
+            android:color="@color/day_stroke"/>
+    </shape>
+</item>
+
+</layer-list>
