--- a/app/src/main/res/layout/day_view_pager.xml
+++ b/app/src/main/res/layout/day_view_pager.xml
@@ -34,8 +34,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.Base"/>
-
+                app:popupTheme="@style/AppTheme.Base">
+                <TextView
+                    android:id="@+id/day_toolbar_tittle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
