--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,7 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/day_stroke</item>
+        <item name="android:clickable">false</item>
     </style>
 
     <style name="numbers">
@@ -32,6 +33,7 @@
         <item name="android:textColor">@color/day_stroke</item>
         <item name="android:gravity">top</item>
         <item name="android:paddingTop">4dp</item>
+        <item name="android:clickable">false</item>
     </style>
 
     <style name="day_title">
