--- a/app/src/main/res/layout/week_view_pager.xml
+++ b/app/src/main/res/layout/week_view_pager.xml
@@ -34,7 +34,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
-                app:popupTheme="@style/AppTheme.Base"
                 app:layout_collapseMode="parallax"
                 android:textSize="52sp"
                 android:alpha="0.3"
@@ -42,10 +41,11 @@
                 android:gravity="center_vertical"/>
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/week_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/AppTheme.Base"
+                app:popupTheme="@style/AppTheme.Week"
+                android:theme="@style/AppTheme.Week"
                 app:layout_collapseMode="pin"
                 app:layout_scrollFlags="scroll|enterAlways"/>
 
