--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="day_corner_radius">8dp</dimen>
     <dimen name="image_padding">16dp</dimen>
     <dimen name="md_keylines">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
