Custom month view

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
     <dimen name="image_padding">16dp</dimen>
     <dimen name="md_keylines">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="month_day_margin">2dp</dimen>
+    <dimen name="month_day_padding">4dp</dimen>
 </resources>
