--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,6 +47,21 @@
         <item name="android:clickable">false</item>
     </style>
 
+    <style name="month_days_numbers">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/day_stroke</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">@dimen/month_day_padding</item>
+        <item name="android:layout_margin">@dimen/month_day_margin</item>
+    </style>
+
+    <style name="month_days_of_week" parent="month_days_numbers">
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:layout_marginLeft">@dimen/month_day_margin</item>
+        <item name="android:layout_marginRight">@dimen/month_day_margin</item>
+    </style>
+
     <style name="day_title">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/day_title</item>
