--- a/app/src/main/res/layout/month_day_view.xml
+++ b/app/src/main/res/layout/month_day_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:id="@+id/month_day_frame"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:layout_margin="@dimen/month_day_margin"
-             android:background="@color/day_stroke_back">
+             android:layout_margin="@dimen/month_day_margin">
 
     <TextView
         android:id="@+id/month_day_number"
