--- a/app/src/main/res/layout/month_fragment.xml
+++ b/app/src/main/res/layout/month_fragment.xml
@@ -5,11 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <ImageView
+        android:id="@+id/month_image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
         android:src="@drawable/styczen"/>
     <TextView
+        android:id="@+id/month_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/day_stroke"
@@ -34,6 +36,7 @@
         android:gravity="center_horizontal|top"/>
 
     <LinearLayout
+        android:id="@+id/month_week_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/day_stroke">
@@ -76,14 +79,14 @@
         <TextView
             android:text="S"
             style="@style/month_days_of_week"
-            android:textColor="@color/day_stroke_back"
+            android:textColor="@color/saturday_red"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"/>
         <TextView
             android:text="N"
             style="@style/month_days_of_week"
-            android:textColor="@color/day_stroke_back"
+            android:textColor="@color/sunday_red"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"/>
