--- a/app/src/main/res/layout/day_event_layout.xml
+++ b/app/src/main/res/layout/day_event_layout.xml
@@ -3,13 +3,13 @@
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_marginBottom="@dimen/activitu_half_margin"
-              android:layout_marginTop="@dimen/activitu_half_margin"
+              android:layout_marginBottom="@dimen/activity_vertical_margin"
+              android:layout_marginTop="@dimen/activity_quarter_margin"
               android:background="@drawable/day_stroke_shape"
               android:orientation="horizontal"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:paddingLeft="16dp"
-              android:paddingTop="@dimen/activity_vertical_margin">
+              android:paddingBottom="@dimen/activity_half_margin"
+              android:paddingLeft="@dimen/activity_half_margin"
+              android:paddingTop="@dimen/activity_half_margin">
 
 
     <LinearLayout
@@ -27,15 +27,13 @@
                 android:id="@+id/starting_hour"
                 style="@style/numbers"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="14"/>
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/starting_minute"
                 style="@style/numbers"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="30"
                 android:textSize="12sp"/>
         </LinearLayout>
 
@@ -49,15 +47,13 @@
                 android:id="@+id/ending_hour"
                 style="@style/numbers"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="16"/>
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/ending_minute"
                 style="@style/numbers"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="30"
                 android:textSize="12sp"/>
         </LinearLayout>
     </LinearLayout>
