--- a/app/src/main/res/layout/week_fragment.xml
+++ b/app/src/main/res/layout/week_fragment.xml
@@ -3,8 +3,9 @@
     android:id="@+id/week_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activitu_half_margin"
-    android:paddingRight="@dimen/activitu_half_margin"
+    android:paddingLeft="@dimen/activity_quarter_margin"
+    android:paddingBottom="@dimen/activity_half_margin"
+    android:paddingRight="@dimen/activity_quarter_margin"
     android:background="@color/back"
    />
 
