--- a/app/src/main/res/layout/week_activity.xml
+++ b/app/src/main/res/layout/week_activity.xml
@@ -1,7 +1,7 @@
 <android.support.design.widget.CoordinatorLayout
+    android:id="@+id/main_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,56 +15,85 @@
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
             android:fitsSystemWindows="true"
-            app:expandedTitleMarginStart="24dp"
+            app:expandedTitleMarginBottom="24dp"
             app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginBottom="24dp">
+            app:expandedTitleMarginStart="24dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/tool_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="fitEnd"
                 android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax"
-                android:padding="@dimen/image_padding"/>
+                android:padding="@dimen/image_padding"
+                android:scaleType="fitEnd"
+                app:layout_collapseMode="parallax"/>
+
             <TextView
                 android:id="@+id/week_subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="24dp"
-                app:layout_collapseMode="parallax"
-                android:textSize="52sp"
-                android:alpha="0.3"
                 android:layout_gravity="center_vertical|left"
-                android:gravity="center_vertical"/>
+                android:layout_marginLeft="24dp"
+                android:alpha="0.3"
+                android:gravity="center_vertical"
+                android:textSize="52sp"
+                app:layout_collapseMode="parallax"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/week_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/AppTheme.Week"
                 android:theme="@style/AppTheme.Week"
                 app:layout_collapseMode="pin"
-                app:layout_scrollFlags="scroll|enterAlways"/>
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:popupTheme="@style/AppTheme.Week"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/week_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/back"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floating_action_button"
+
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/floating_action_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
         android:layout_marginBottom="@dimen/md_keylines"
         android:layout_marginRight="@dimen/md_keylines"
-        android:src="@drawable/ic_add_white_24dp"/>
+        app:menu_icon="@drawable/ic_filter_none_white_24dp">
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_menu_month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_today_white_24dp"
+            app:fab_label="@string/acton_month"
+            app:fab_size="mini"/>
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_menu_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_reply_white_24dp"
+            app:fab_label="@string/acton_back_to_now"
+            app:fab_size="mini"/>
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_menu_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_add_white_24dp"
+            app:fab_label="@string/action_add"
+            app:fab_size="mini"/>
+
+    </com.github.clans.fab.FloatingActionMenu>
 </android.support.design.widget.CoordinatorLayout>
 
 
