--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="month_day_margin">2dp</dimen>
     <dimen name="month_day_padding">4dp</dimen>
+    <dimen name="transparent_corner_radius">4dp</dimen>
 </resources>
