--- a/app/src/main/res/layout-hdpi/widget_layout.xml
+++ b/app/src/main/res/layout-hdpi/widget_layout.xml
@@ -10,6 +10,8 @@
         android:id="@+id/widget_back_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:scaleType="fitCenter"
         android:src="@drawable/balagany"/>
 
@@ -99,8 +101,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:visibility="gone">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/widget_kupka_3"
@@ -144,8 +145,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:visibility="gone">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/widget_kupka_4"
