--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -92,8 +92,7 @@
                     android:id="@+id/widget_event_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/my_primary_dark"
-                    android:maxLines="2"/>
+                    style="@style/widget_event"/>
             </LinearLayout>
 
             <LinearLayout
@@ -112,8 +111,7 @@
                     android:id="@+id/widget_event_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/my_primary_dark"
-                    android:maxLines="2"/>
+                    style="@style/widget_event"/>
             </LinearLayout>
         </LinearLayout>
 
@@ -126,7 +124,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/widget_kupka_2"
@@ -138,14 +137,13 @@
                     android:id="@+id/widget_event_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/my_primary_dark"/>
+                    style="@style/widget_event"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:visibility="gone">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/widget_kupka_4"
@@ -157,7 +155,7 @@
                     android:id="@+id/widget_event_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/my_primary_dark"/>
+                    style="@style/widget_event"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
